Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13775

Wrong memory copy in tgt_pages2shortio

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 9223372036854775807

      tgt_pages2shortio() try to copy local pages memory to ptlrpc inline buf.

      The right logic should move page @ptr to offset + count, however, it does this logic wrongly, this doesn't cause any problem so far, because normally @lnb_page_offset is 0. when i tried to play with unaligned DIO, we could hit the problem.

            wshilong Wang Shilong (Inactive)
            wshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: